Bug 1210596 - Mark array groups as not packed when initializing individual elements with holes, r=jandem, a=lizzard